# OneCompression

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
benchmark/: README.md
benchmark/llama3-8b-gptq/: quant_benchmark.py
benchmark/llama3-8b-jointq/: .gitignore  README.md  quant_benchmark.py
benchmark/llama3-8b-jointq/conf/: benchmark_llama3-8b.yaml
benchmark/llama3-8b-qep-gptq/: quant_benchmark.py
benchmark/llama3-8b-various/: README.md  quant_benchmark.py
benchmark/qwen3-14b-gptq/: .gitignore  README.md  quant_benchmark.py
benchmark/qwen3-14b-jointq/: .gitignore  README.md  quant_benchmark.py
benchmark/qwen3-8b-gptq/: .gitignore  README.md  quant_benchmark.py
benchmark/qwen3-8b-jointq/: .gitignore  README.md  quant_benchmark.py
docs/: index.md
docs/algorithms/: autobit.md  jointq.md  overview.md  rtn.md
docs/api/: calibration_config.md  post_process.md  utilities.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: basic-usage.md  cli.md  configuration.md  examples.md  post-process.md  pre-process.md  vllm-inference.md
example/: .gitignore  example_autobit.py  example_custom_calibration.py  example_gptq.py  example_jointq.py  example_qep_gptq.py  example_save_load.py  example_vllm_inference.py
example/data/: python_calibration.txt
example/post_process/: example_blockwise_ptq.py  example_lora_sft.py  example_lora_sft_knowledge.py
example/pre_process/: example_preprocess_save_load.py
model_validation/gptq/: README.md
onecomp/: __init__.py  __version__.py  model_config.py  quantized_model_loader.py  runner.py
onecomp/calibration/: __init__.py  _cache.py  c4.py  calibration_config.py  calibration_data_loader.py  chunking.py  custom.py  wikitext.py
onecomp/post_process/: _base.py  blockwise_ptq.py
onecomp/pre_process/: prepare_rotated_model.py  preprocess_args.py  quant_models.py  train_rotation.py
onecomp/qep/: _quantize_with_qep.py  _quantize_with_qep_arch.py
onecomp/quantizer/: _quantizer.py
onecomp/runner_methods/: chunked_quantization.py  jointq_error_propagation.py  multi_gpu_quantization.py
onecomp/utils/: __init__.py  blockwise.py  calibration.py  perplexity.py  unfuse_moe.py
scripts/: check_copyright_header.py  check_no_japanese.py
tests/: .gitignore
tests/onecomp/: test_eval_quantized_vs_dequantized.py  test_qep_general_consistency.py
vllm_plugins/dbf/: __init__.py  vllm_plugin.py
vllm_plugins/gptq/: vllm_plugin.py
vllm_plugins/utils/: module.py
(+96 files in other folders)
